--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -10,6 +10,7 @@ jobs:
       uses: actions/checkout@v2
     - name: test
       run: |
+        set -x
         docker build -t test .
         docker run -d  --name containertest test
         while true
@@ -17,3 +18,11 @@ jobs:
             sleep 10
             docker exec containertest ps | grep 'php -f index.php' && break
           done
+        while true
+          do \
+            sleep 10
+            docker logs containertest 2>& 1 | grep 'PHP .* Development Server started' && break
+          done
+        
+        
+        
