--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -21,7 +21,7 @@ jobs:
         while true
           do \
             sleep 10
-            docker logs containertest 2>& 1 | grep 'PHP .* Development Server started' && break
+            docker logs containertest 2>& 1 | grep 'PHP .* Development Server .* started' && break
           done
         
         
