--- a/etc/swarm/manifests/phpinfo-2.yaml
+++ b/etc/swarm/manifests/phpinfo-2.yaml
@@ -26,6 +26,7 @@ services:
      retries: 3
      start_period: 30s
      #test: php -r "print file_get_contents('http://localhost:8080/');"
+     #test: wget -q --spider http://localhost:8080
      timeout: 1s
     image: jlfranco47/phpinfo-2:latest
     networks:
